<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_menu"
        tools:context=".MainActivity">
    <TextView
            android:textColor="@color/mainLogoColor"
            android:text="@string/main_title"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:gravity="center"
            android:textSize="@dimen/main_title_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/main_subtitle"
            android:textColor="@color/mainSubTitleColor"
            android:gravity="center"
            android:textSize="@dimen/main_subtitle_font_size"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSubTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:layout_marginTop="32dp" android:layout_marginEnd="42dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="42dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:textColor="#FFF"
            android:text="@string/developed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFooter"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:textSize="@dimen/text_button_font_size"
            android:text="@string/button_exit"
            android:id="@+id/btExit"
            style="@style/custom_button"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/tvFooter" android:layout_marginEnd="42dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="42dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:text="@string/button_new_game"
            style="@style/custom_button"
            android:id="@+id/btNewGame"
            app:layout_constraintStart_toStartOf="@+id/btExit" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/btExit" android:layout_marginBottom="42dp"
            app:layout_constraintBottom_toTopOf="@+id/btExit"/>


</androidx.constraintlayout.widget.ConstraintLayout>
